+Fixed scrollbar bug for VideosList

--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -594,6 +594,7 @@ header{
       color: $black;
     }
     .videos-list{
+      position: relative;
       display: flex;
       flex-flow: row nowrap;
       overflow-x: auto;
